--- a/frontend/less/core/variables.less
+++ b/frontend/less/core/variables.less
@@ -2,6 +2,8 @@
 //==================================================================
 @standard: 				yantramanav_regularregular, Helvetica, Arial, sans-serif;
 @bold: 					yantramanavmedium, Helvetica, Arial, sans-serif;
+@code: 					silkscreennormal, Courier, monospace;
+@code_bold: 			silkscreenbold, Courier, monospace;
 
 @light: 				300;
 @book: 				    500;
@@ -24,7 +26,8 @@
 @tablet-min: 			~'screen and (min-width: @{screen-md})';	
 @mobile-min: 			~'screen and (min-width: @{screen-sm})';
 
-@full: ~'screen and (min-width: 640px)';
+@full_min: ~'screen and (min-width: 640px)';
+@full_max: ~'screen and (max-width: 640px)';
 
 // Colors
 //==================================================================
@@ -36,7 +39,7 @@
 @color-dark: 			#000;
 @color-dark-accent: 	#111;
 @color-light: 			#fff;
-@color-dark-accent: 	#eee;
+@color-light-accent: 	#eee;
 
 @color-cyan: 			#0ff;
 @color-magenta: 		#f0f;
