--- a/templates/views/project.hbs
+++ b/templates/views/project.hbs
@@ -1,30 +1,164 @@
 
-<div class="container">
-	{{!-- {{>navigation}} --}}
-	<div class="row">
-		<div class="">
-			<article>
-					<h1>
-						{{data.project.title}}
-						<span>{{data.project.date}}</span>
-					</h1>
-					{{{data.project.subheadline}}}
+<div class="extract extract_project">
+	
+	<div class="section title">
+		<div class="interior">
+			<h1>
+				{{data.project.title}}
+				<span>{{data.project.date}}</span>
+			</h1>
 
-					{{#if data.project.mainEvent_vimeo_id}}
-						<iframe src="//player.vimeo.com/video/{{data.project.mainEvent_vimeo_id}}" width="WIDTH" height="HEIGHT" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					{{else}}
-						<img src="{{{cloudinaryUrl data.project.mainEvent_image width=750 height=450 crop='fit' }}}">
-					{{/if}}
-					<h5>
-						{{{categoryList data.project.categories prefix="projected in "}}}
-						{{#if author.name.first}}by {{author.name.first}}{{/if}}
-					</h5>
-				</header>
-				<div class="project">
-					{{#if data.project.image}}<img src="{{{cloudinaryUrl data.project.image width=750 height=450 crop='fit' }}}" class="img-responsive">{{/if}}
-					{{{data.project.content.extended}}}
-				</div>
-			</article>
+			<h2>
+				{{{data.project.subheadline}}}
+			</h2>
+
+			<h3>
+				{{{data.project.role}}}
+			</h3>
 		</div>
 	</div>
+
+
+	<div class="section main_event">
+		<div class="interior">			
+
+		{{#if data.project.mainEvent_vimeo_id}}
+			<iframe 
+				src="//player.vimeo.com/video/{{data.project.mainEvent_vimeo_id}}" 
+				width="WIDTH" 
+				height="HEIGHT" 
+				frameborder="0" 
+				webkitallowfullscreen 
+				mozallowfullscreen 
+				allowfullscreen>
+			</iframe>
+		{{else}}
+			<img 
+				src-desktop="{{{cloudinaryUrl data.project.mainEvent.desktop}}}"
+				src-mobile="{{{cloudinaryUrl data.project.mainEvent.mobile}}}">
+		{{/if}}
+
+		</div>
+	</div>
+
+
+	<div class="section title">
+		<div class="interior">
+			<h1>
+				{{data.project.content.subsection01_title}}
+			</h1>
+
+			<h2>
+				{{{data.project.content.subsection01_subtitle}}}
+			</h2>
+		</div>
+	</div>
+
+
+	<div class="section images">
+		<div class="interior" count="{{data.project.content.subsection01_imageRow01.length}}">
+			{{#each data.project.content.subsection01_imageRow01}}
+				<img 
+					src-desktop="{{{cloudinaryUrl}}}">
+			{{/each}}
+		</div>
+	</div>
+
+
+	{{#if data.project.content.subsection01_imageRow02}}
+
+	<div class="section images">
+		<div class="interior" count="{{data.project.content.subsection01_imageRow02.length}}">
+			{{#each data.project.content.subsection01_imageRow02}}
+				<img 
+					src-desktop="{{{cloudinaryUrl}}}">
+			{{/each}}
+		</div>
+	</div>
+
+	{{/if}}
+
+
+	{{#if data.project.content.subsection01_imageRow03}}
+
+	<div class="section images">
+		<div class="interior" count="{{data.project.content.subsection01_imageRow03.length}}">
+			{{#each data.project.content.subsection01_imageRow03}}
+				<img 
+					src-desktop="{{{cloudinaryUrl}}}">
+			{{/each}}
+		</div>
+	</div>
+
+	{{/if}}
+
+
+	{{#if data.project.content.subsection01_imageRow04}}
+
+	<div class="section images">
+		<div class="interior" count="{{data.project.content.subsection01_imageRow04.length}}">
+			{{#each data.project.content.subsection01_imageRow04}}
+				<img 
+					src-desktop="{{{cloudinaryUrl}}}">
+			{{/each}}
+		</div>
+	</div>
+
+	{{/if}}
+
+
+	<div class="section title">
+		<div class="interior">
+			<h1>
+				{{data.project.content.subsection02_title}}
+			</h1>
+
+			<h2>
+				{{{data.project.content.subsection02_subtitle}}}
+			</h2>
+		</div>
+	</div>
+
+
+	{{#if data.project.content.subsection02_link}}
+
+	<div class="section project_link">
+		<div class="interior">
+			{{{data.project.content.subsection02_link}}}
+		</div>
+	</div>
+
+	{{/if}}
+
+
+	{{#if data.project.content.subsection02_imageRow}}
+
+	<div class="section images">
+		<div class="interior" count="{{data.project.content.subsection02_imageRow.length}}">
+			{{#each data.project.content.subsection02_imageRow}}
+				<img 
+					src-desktop="{{{cloudinaryUrl}}}">
+			{{/each}}
+		</div>
+	</div>
+
+	{{/if}}
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
