--- a/frontend/less/core/fonts.less
+++ b/frontend/less/core/fonts.less
@@ -68,3 +68,37 @@
 //     font-style: normal;
 
 // }
+
+
+
+
+
+
+
+
+
+@font-face {
+    font-family: 'silkscreennormal';
+    src: url('../type/silkscreen/silkscreen_normal_macroman/slkscr-webfont.eot');
+    src: url('../type/silkscreen/silkscreen_normal_macroman/slkscr-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../type/silkscreen/silkscreen_normal_macroman/slkscr-webfont.woff') format('woff'),
+         url('../type/silkscreen/silkscreen_normal_macroman/slkscr-webfont.ttf') format('truetype'),
+         url('../type/silkscreen/silkscreen_normal_macroman/slkscr-webfont.svg#silkscreennormal') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+@font-face {
+    font-family: 'silkscreenbold';
+    src: url('../type/silkscreen/silkscreen_bold_macroman/slkscrb-webfont.eot');
+    src: url('../type/silkscreen/silkscreen_bold_macroman/slkscrb-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../type/silkscreen/silkscreen_bold_macroman/slkscrb-webfont.woff') format('woff'),
+         url('../type/silkscreen/silkscreen_bold_macroman/slkscrb-webfont.ttf') format('truetype'),
+         url('../type/silkscreen/silkscreen_bold_macroman/slkscrb-webfont.svg#silkscreenbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
