--- a/frontend/less/main.less
+++ b/frontend/less/main.less
@@ -16,4 +16,9 @@
 @import "modules/gentle.less";
 @import "modules/navigation.less";
 @import "modules/header.less";
+@import "modules/cube.less";
+@import "modules/loader.less";
+@import "modules/project.less";
+@import "modules/lander.less";
+@import "modules/hello.less";
 
