--- a/frontend/less/modules/gentle.less
+++ b/frontend/less/modules/gentle.less
@@ -270,10 +270,11 @@
 			right: 0;
 			height: 64px;
 			width: 64px;
-			background-color: black;					
+			background-color: black;
+			transform: rotate(-90deg);					
 
 			&:before{
-				.icon(1, 1, @iconable);
+				.icon(0, 1, @iconable);
 			}
 		}
 	}
