--- a/frontend/less/modules/loader.less
+++ b/frontend/less/modules/loader.less
@@ -16,7 +16,9 @@
 		.fillblock;
 		overflow: hidden;
 		transform: translateY(100%);
-		display: table;
+		display: table;	
+		border-bottom: 1px solid white;
+
 
 		.present &{
 			transition: all .6s ease;
