--- a/frontend/less/skeleton/skeleton.less
+++ b/frontend/less/skeleton/skeleton.less
@@ -11,6 +11,12 @@ body{
 	line-height: @base-line-height;
 }
 
+body{
+	&.hello{
+		background-color: black;
+	}
+}
+
 #navigation{ z-index: 3; }
 #gentle{     
 	z-index: 1; 
