--- a/templates/views/hello.hbs
+++ b/templates/views/hello.hbs
@@ -1,14 +1,23 @@
 <div class="extract extract_hello">
 	<div class="hello">
-		HELLO WORLD I AM NIHAD
+		<div id="hello_output" viewing="">
+			<div class="nihad">
+				<img
+					src-desktop="/img/png/hello_nihad.png" />
+			</div>
+			<div class="mike">
+				<img
+					src-desktop="/img/png/m001-02.png" />
+				
+			</div>
+			
+		</div>
 
+		<div id="hello_terminal">
+			
+		</div>
 
-		<img 
-			src-desktop="https://res.cloudinary.com/keystone-demo/image/upload/v1464700359/fszchzu9qifjluimbph7.jpg" />
-		<img 
-			src-desktop="http://res.cloudinary.com/keystone-demo/image/upload/tqym5lznfisnr5sktyd0.jpg" />
-		<img 
-			src-desktop="http://res.cloudinary.com/keystone-demo/image/upload/yfyeqx8551uxp7jkpwnk.jpg" />
-
+		<input type="text" id="hello_input" />
+		<div class="hello_cursor"></div>
 	</div>
 </div>
