--- a/templates/views/project.hbs
+++ b/templates/views/project.hbs
@@ -122,11 +122,9 @@
 
 	{{#if data.project.content.subsection02_link}}
 
-	<div class="section project_link">
-		<div class="interior">
-			{{{data.project.content.subsection02_link}}}
-		</div>
-	</div>
+	<a class="section project_link" href="{{{data.project.content.subsection02_link}}}">
+		<div></div>
+	</a>
 
 	{{/if}}
 
