--- a/frontend/less/modules/lander.less
+++ b/frontend/less/modules/lander.less
@@ -4,7 +4,7 @@
 	transform: translate3d(0, 100%, 0);
 	backface-visibility: hidden;
 	overflow: hidden;
-
+	
 	.present &{
 		transition: transform .6s ease;
 	}
@@ -15,6 +15,10 @@
 
 	.home &{
 		z-index: 1;		
+	}
+
+	.hello &{
+		background-color: black;
 	}
 
 	#lander_interior{
@@ -29,6 +33,10 @@
 
 		.loading &{
 			padding-top: 75px;
+		}
+
+		.loading.hello &{
+			padding-top: 0;
 		}
 
 		.landed &{
@@ -55,6 +63,10 @@
 	transition: all 1s ease;
 	transform: translateY(-75px);
 	.loading &{
+	}
+
+	.hello &{
+		display: none;
 	}
 
 	.landed &{
