--- a/frontend/less/modules/project.less
+++ b/frontend/less/modules/project.less
@@ -19,6 +19,7 @@
 	}
 
 	.section{
+		display: block;
 		position: relative;
 		float: left;
 		width: 100%;
@@ -66,84 +67,191 @@
 		}
 	}
 
-	.images{
-		margin: 0 -8px 16px -8px;
+	.project_link{
+		// 48 x 192
+		height: 144px;
+		margin: 48px 0;
+		background-color: black;
+		position: relative;
+
+		&:before{
+			content: '';
+			position: absolute;
+			height: ~'calc(100% - 16px)';
+			width: ~'calc(100% - 16px)';
+			top: 8px;
+			left: 8px;
+			border: 1px dashed white;
+		}
+
+		div{
+			width: 192px;
+			height: 48px;
+			margin: 48px auto;
+			background-image: url(../img/png/clicker.png);
+		}
+
+		&:hover{
+			&:before{
+				border-style: dotted;
+			}
+
+			div{
+				animation: linking 4s infinite step-start;
+			}
+		}
 	}
 
-	.images .interior{
-		overflow: hidden;
+	.images{
+		margin: 0 -8px 16px -8px;
+		width: ~'calc(100% + 16px)';
 
-		img{
-			height: auto;
-			position: relative;
-			float: left;
-			padding: 0 8px 8px;
+		// margin-left: -8px;
 
-			.present &{
-				transition: all .4s ease;
-			}
-		}
+		.interior{
+			overflow: hidden;
 
-		&[count="1"]{
 			img{
-				width: 100%;
-			}
-		}
+				height: auto;
+				position: relative;
+				float: left;
+				padding: 0 8px 8px;
+				// margin: 0 8px 8px;
 
-		&[count="2"]{
-			img{
-				width: 100%;
-				@media @full_min {
+				.present &{
+					transition: all .4s ease;
+				}
+			}
+
+			&[count="1"]{
+				img{
+					width: 100%;
+				}
+			}
+
+			&[count="2"]{
+				img{
+					width: 100%;
+					@media @full_min {
+						width: 50%;
+					}
+				}
+			}
+
+			&[count="3"],
+			&[count="6"]{
+				img{
+					width: 100%;
+
+					@media @full_min {
+						width: 100 / 3%;
+					}
+				}
+			}
+
+			&[count="4"]{
+				img{
 					width: 50%;
+
+					@media @full_min {
+						width: 25%;
+					}
 				}
 			}
-		}
 
-		&[count="3"],
-		&[count="6"]{
-			img{
-				width: 100%;
+			&[count="5"]{
+				img{
+					width: 50%;
 
-				@media @full_min {
-					width: 100 / 3%;
+					@media @full_min {
+						width: 20%;
+					}
 				}
 			}
-		}
 
-		&[count="4"]{
-			img{
-				width: 50%;
+			&[count="7"],
+			&[count="8"]{
+				img{
+					width: 50%;
 
-				@media @full_min {
-					width: 25%;
-				}
-			}
-		}
-
-		&[count="5"]{
-			img{
-				width: 50%;
-
-				@media @full_min {
-					width: 20%;
-				}
-			}
-		}
-
-		&[count="7"],
-		&[count="8"]{
-			img{
-				width: 50%;
-
-				@media @full_min {
-					width: 25%;
+					@media @full_min {
+						width: 25%;
+					}
 				}
 			}
 		}
 	}
 }
 
+@keyframes linking {
 
+	// 64
+
+	0%		 { background-position: 0 -0  * 48px; }
+	01.5625% { background-position: 0 -1  * 48px; }
+	03.1250% { background-position: 0 -2  * 48px; }
+	04.6875% { background-position: 0 -3  * 48px; }
+	06.2500% { background-position: 0 -4  * 48px; }
+	07.8125% { background-position: 0 -5  * 48px; }
+	09.3750% { background-position: 0 -6  * 48px; }
+	10.9375% { background-position: 0 -7  * 48px; }
+	12.5000% { background-position: 0 -8  * 48px; }
+	14.0625% { background-position: 0 -9  * 48px; }
+	15.6250% { background-position: 0 -10 * 48px; }
+	17.1875% { background-position: 0 -11 * 48px; }
+	18.7500% { background-position: 0 -12 * 48px; }
+	20.3125% { background-position: 0 -13 * 48px; }
+	21.8750% { background-position: 0 -14 * 48px; }
+	23.4375% { background-position: 0 -15 * 48px; }
+	25.0000% { background-position: 0 -16 * 48px; }
+	26.5625% { background-position: 0 -17 * 48px; }
+	28.1250% { background-position: 0 -18 * 48px; }
+	29.6875% { background-position: 0 -19 * 48px; }
+	31.2500% { background-position: 0 -20 * 48px; }
+	32.8125% { background-position: 0 -21 * 48px; }
+	34.3750% { background-position: 0 -22 * 48px; }
+	35.9375% { background-position: 0 -23 * 48px; }
+	37.5000% { background-position: 0 -24 * 48px; }
+	39.0625% { background-position: 0 -25 * 48px; }
+	40.6250% { background-position: 0 -26 * 48px; }
+	42.1875% { background-position: 0 -27 * 48px; }
+	43.7500% { background-position: 0 -28 * 48px; }
+	45.3125% { background-position: 0 -29 * 48px; }
+	46.8750% { background-position: 0 -30 * 48px; }
+	48.4375% { background-position: 0 -31 * 48px; }
+	50.0000% { background-position: 0 -32 * 48px; }
+	51.5625% { background-position: 0 -33 * 48px; }
+	53.1250% { background-position: 0 -34 * 48px; }
+	54.6875% { background-position: 0 -35 * 48px; }
+	56.2500% { background-position: 0 -36 * 48px; }
+	57.8125% { background-position: 0 -37 * 48px; }
+	59.3750% { background-position: 0 -38 * 48px; }
+	60.9375% { background-position: 0 -39 * 48px; }
+	62.5000% { background-position: 0 -40 * 48px; }
+	64.0625% { background-position: 0 -41 * 48px; }
+	65.6250% { background-position: 0 -42 * 48px; }
+	67.1875% { background-position: 0 -43 * 48px; }
+	68.7500% { background-position: 0 -44 * 48px; }
+	70.3125% { background-position: 0 -45 * 48px; }
+	71.8750% { background-position: 0 -46 * 48px; }
+	73.4375% { background-position: 0 -47 * 48px; }
+	75.0000% { background-position: 0 -48 * 48px; }
+	76.5625% { background-position: 0 -49 * 48px; }
+	78.1250% { background-position: 0 -50 * 48px; }
+	79.6875% { background-position: 0 -51 * 48px; }
+	81.2500% { background-position: 0 -52 * 48px; }
+	82.8125% { background-position: 0 -53 * 48px; }
+	84.3750% { background-position: 0 -54 * 48px; }
+	85.9375% { background-position: 0 -55 * 48px; }
+	87.5000% { background-position: 0 -56 * 48px; }
+	89.0625% { background-position: 0 -57 * 48px; }
+	90.6250% { background-position: 0 -58 * 48px; }
+	92.1875% { background-position: 0 -59 * 48px; }
+	93.7500% { background-position: 0 -60 * 48px; }
+	95.3125% { background-position: 0 -61 * 48px; }
+	96.8750% { background-position: 0 -62 * 48px; }
+	98.4375% { background-position: 0 -63 * 48px; }
+}
 
 
 
